RESOLVED FIXED83111
[Qt][WK2] Assert on startup after r113090
https://bugs.webkit.org/show_bug.cgi?id=83111
Summary [Qt][WK2] Assert on startup after r113090
Yael
Reported 2012-04-03 20:17:41 PDT
Need to add willBeDestroyed to WebGraphicsLayer,
Attachments
Patch. (4.05 KB, patch)
2012-04-03 20:28 PDT, Yael
no flags
Yael
Comment 1 2012-04-03 20:28:23 PDT
Noam Rosenthal
Comment 2 2012-04-03 20:43:56 PDT
Comment on attachment 135499 [details] Patch. Thanks!
WebKit Review Bot
Comment 3 2012-04-03 21:21:33 PDT
Comment on attachment 135499 [details] Patch. Clearing flags on attachment: 135499 Committed r113135: <http://trac.webkit.org/changeset/113135>
WebKit Review Bot
Comment 4 2012-04-03 21:21:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.