[Qt][WK2] Assert on startup after r113090 https://bugs.webkit.org/show_bug.cgi?id=83111

Reviewed by Noam Rosenthal.

Source/WebCore:

Add willBeDestroyed to to GraphicsLayerTextureMapper.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::~GraphicsLayerTextureMapper):
(WebCore):
(WebCore::WebGraphicsLayer::willBeDestroyed):
* platform/graphics/texmap/GraphicsLayerTextureMapper.h:
(GraphicsLayerTextureMapper):

Source/WebKit2:

Add willBeDestroyed to to WebGraphicsLayer.

* WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:
(WebCore::WebGraphicsLayer::~WebGraphicsLayer):
(WebCore):
(WebCore::WebGraphicsLayer::willBeDestroyed):
* WebProcess/WebCoreSupport/WebGraphicsLayer.h:
(WebGraphicsLayer):


Canonical link: https://commits.webkit.org/100479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113135 268f45cc-cd09-0410-ab3c-d52691b4dbfc