Source/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
@@ -57,6 +57,12 @@ void GraphicsLayerTextureMapper::setName(const String& name)
 
 GraphicsLayerTextureMapper::~GraphicsLayerTextureMapper()
 {
+    willBeDestroyed();
+}
+
+void GraphicsLayerTextureMapper::willBeDestroyed()
+{
+    GraphicsLayer::willBeDestroyed();
 }
 
 /* \reimp (GraphicsLayer.h): The current size might change, thus we need to update the whole display.
